--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,3 +1,12 @@
 .app {
   width: 100%;
 }
+
+.app__header {
+  width: 100%;
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.2);
+  z-index: 99;
+  top: 0;
+  left: 0;
+}
