--- a/src/styles/menuBar.css
+++ b/src/styles/menuBar.css
@@ -1,10 +1,13 @@
 .header {
   width: 100%;
-  height: 50px;
+  height: 90px;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
+
+  font-size: 20px;
+  font-weight: 400;
 }
 
 .header__menus ul {
@@ -15,6 +18,7 @@
   justify-content: space-around;
 }
 
-.header__menus ul li {
+.header__menus ul li a {
   margin: 0px 40px;
+  color: #ffff;
 }
