--- a/src/styles/ACSC00.css
+++ b/src/styles/ACSC00.css
@@ -81,6 +81,18 @@
   box-shadow: 3px 3px 3px #eee;
 }
 
+.MainComponent1 {
+  width: 100%;
+  height: 250px;
+  background-color: red;
+}
+
+.MainComponent2 {
+  width: 100%;
+  height: 250px;
+  background-color: blue;
+}
+
 @media (max-width: 1024px) {
   .ACSC00__bg__arrow svg {
     color: #fff;
